--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
+@import url(//fonts.googleapis.com/css?family=Open+Sans);
+
 .wow {
   width: 100px;
 }
+
 body {
   margin: 0;
   background-color: #000000;
 }
+
 header h1 {
-	font-size: 40px;
+	font-size: 80px;
 	padding-top: 50px;
 	margin: 0 0 0 20px;
   text-align: center;
@@ -23,7 +27,7 @@ header h1 a:hover {
 }
 
 h2{
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
 }
 
@@ -40,12 +44,12 @@ a {
 header,
 nav,
 main,
-footer, p {
-  font-family: 'Quattrocento Sans', sans-serif;
+footer, p, body {
+  font-family: 'Open Sans', sans-serif;
 }
 
 .wrapper {
-  width: 300px;
+  width: 600px;
   margin: auto;
 }
 
@@ -67,7 +71,7 @@ nav a {
   margin-right: 40px;
   font-size: 18px;
   color: #abb5bf;
-  font-family: Quattrocento, sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 nav a:hover {
