--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
   width: 100px;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 body {
   margin: 0;
   background-color: #000000;
@@ -13,21 +20,23 @@ header h1 {
 	font-size: 80px;
 	padding-top: 50px;
 	margin: 0 0 0 20px;
-  text-align: center;
 }
 
-header h1 a, h2, p, ul, ol, footer {
+header h1 a, h2, h3, p, ul, ol, footer {
 	text-decoration: none;
 	color: #ffffff;
-
+  
 }
 
 header h1 a:hover {
 	color: #faf4f4;
 }
 
-h2{
+h2 {
   font-size: 30px;
+}
+
+h1, h2, h3 {
   text-align: center;
 }
 
@@ -56,6 +65,7 @@ footer, p, body {
 
 img {
 	width: 100%
+  height: 100%
 }
 
 /* ----- =header & nav ----- */
