--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url(//fonts.googleapis.com/css?family=Open+Sans);
 
+/* -------- wow, center, wrapper -------- */
 .wow {
   width: 100px;
 }
@@ -11,6 +12,12 @@
   width: 50%;
 }
 
+.wrapper {
+  width: 600px;
+  margin: auto;
+}
+
+/*  ---- body, header 1, header 2, header 3, p, ul, ol, footer, a ---- */
 body {
   margin: 0;
   background-color: #000000;
@@ -58,11 +65,7 @@ footer, p, body {
   font-family: 'Open Sans', sans-serif;
 }
 
-.wrapper {
-  width: 600px;
-  margin: auto;
-}
-
+/*-------- Image -------- */
 img {
 	width: 100%
   height: 100%
